--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'Futura Book';
-  src: url("../fonts/futura/futuraBookC.woff") format("woff"), url("../fonts/futura/futuraBookC.woff2") format("woff2");
+  src: url("..ontsuturauturaBookC.woff") format("woff"), url("..ontsuturauturaBookC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: wrap; }
 
 @font-face {
   font-family: 'Futura Demi';
-  src: url("../fonts/futura/FuturaDemiC.woff") format("woff"), url("../fonts/futura/FuturaDemiC.woff2") format("woff2");
+  src: url("../fonts/futura/FuturaDemiC.woff") format("woff"), url("../fonts/futura/FuturaDemiC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: wrap; }
@@ -355,6 +355,32 @@ template {
 
 .contacts__phone {
   margin-right: 45px; }
+
+.hero {
+  background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
+  height: 100vh;
+  color: #fff;
+  position: relative; }
+  .hero__instagram {
+    max-width: 80px;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0; }
+
+.instagram {
+  background-color: #131313;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .instagram__link {
+    text-transform: uppercase;
+    color: #E3B873;
+    text-decoration: none;
+    transform: rotate(90deg); }
+
+.title {
+  margin: 0; }
 
 body {
   font-family: 'Futura Book', sans-serif;
