--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,12 @@ template {
 
 .header {
   background-color: #131313;
-  padding: 24px 0; }
+  padding: 24px 0;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 10; }
 
 .menu {
   display: flex;
@@ -357,6 +362,7 @@ template {
   margin-right: 45px; }
 
 .hero {
+  padding-top: 100px;
   background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
   height: 100vh;
   color: #fff;
