--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,6 +1,11 @@
 .header
   background-color: $dark
   padding: 24px 0
+  position: fixed
+  left: 0
+  top: 0
+  width: 100%
+  z-index: 10
 
 .menu
   display: flex
