--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -9,11 +9,21 @@
   justify-content: center
   justify-content: flex-start
 
+  &::before
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    background-color: rgba($dark, 0.7)
+    margin-top: -20px
+
   &__content
+    position: relative
     max-width: 670px
 
   &__text
     font-size: 22px
+    font-weight: normal
     max-width: 600px
     line-height: 30px
 
@@ -40,6 +50,14 @@
     text-transform: uppercase
     color: $light
     text-decoration: none
+    &::after
+      content: ''
+      width: 30px
+      height: 30px
+      border: 2px solid $primary
+      border-radius: 50%
+      margin-left: 12px
+      background: url('../img/Vector.svg') no-repeat center
 
 .instagram
   background-color: $dark
@@ -48,15 +66,27 @@
   align-items: center
 
   &__link
+    display: flex
+    align-items: center
     text-transform: uppercase
     color: $primary
     text-decoration: none
     transform: rotate(90deg)
+    line-height: 0.8
+
+
+    &::after
+      content: ''
+      width: 50px
+      height: 1px
+      background-color: $primary
+      margin-left: 8px
 
 .title
   margin: 0
   font-family: 'Yeseva One', cursive
   font-size: 40px
+  font-weight: normal
   line-height: 53px
   text-transform: uppercase
 
