feat: add control section and move body settings to _setings.sass

--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,31 @@ template {
   max-width: 1256px;
   margin: auto; }
 
+*, *:before, *:after {
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Futura Book', sans-serif;
+  font-size: 14px; }
+
+.section-title {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Yeseva One', cursive;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px; }
+  .section-title__img {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .section-title__img::after, .section-title__img::before {
+      content: '';
+      margin: 0 10px;
+      height: 2px;
+      width: 32px;
+      background-color: #E3B873; }
+
 .header {
   background-color: #131313;
   padding: 24px 0;
@@ -388,10 +413,11 @@ template {
   .hero::before {
     content: '';
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(19, 19, 19, 0.7);
-    margin-top: -20px; }
+    background-color: rgba(19, 19, 19, 0.7); }
   .hero__content {
     position: relative;
     max-width: 670px; }
@@ -459,10 +485,3 @@ template {
   text-transform: uppercase; }
   .title--primary {
     color: #E3B873; }
-
-*, *:before, *:after {
-  box-sizing: border-box; }
-
-body {
-  font-family: 'Futura Book', sans-serif;
-  font-size: 14px; }
