--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -12,10 +12,11 @@
   &::before
     content: ''
     position: absolute
+    top: 0
+    left: 0
     width: 100%
     height: 100%
     background-color: rgba($dark, 0.7)
-    margin-top: -20px
 
   &__content
     position: relative
