--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,8 @@ template {
   padding: 13px 20px;
   border: none;
   border-radius: 2px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-size: 0.93rem; }
   .button:hover {
     cursor: pointer; }
   .button--primary {
@@ -347,6 +348,9 @@ template {
 
 body {
   font-family: 'Futura Book', sans-serif;
+  font-size: 1rem; }
+
+html {
   font-size: 14px; }
 
 .section-title {
@@ -389,7 +393,7 @@ body {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  margin-right: 40px;
+  margin-right: 2.85rem;
   transition: color 0.2s; }
   .nav__item:hover {
     color: #E3B873; }
@@ -420,9 +424,10 @@ body {
     background-color: rgba(19, 19, 19, 0.7); }
   .hero__content {
     position: relative;
-    max-width: 670px; }
+    max-width: 47.85rem;
+    margin-left: 4.28rem; }
   .hero__text {
-    font-size: 22px;
+    font-size: 1.57rem;
     font-weight: normal;
     max-width: 600px;
     line-height: 30px; }
@@ -438,8 +443,8 @@ body {
     position: absolute;
     left: 0;
     bottom: 0;
-    min-width: 247px;
-    min-height: 97px;
+    min-width: 17.6rem;
+    min-height: 6.9rem;
     background-color: #131313;
     display: flex;
     justify-content: center;
@@ -479,9 +484,50 @@ body {
 .title {
   margin: 0;
   font-family: 'Yeseva One', cursive;
-  font-size: 40px;
+  font-size: 2.857rem;
   font-weight: normal;
   line-height: 53px;
   text-transform: uppercase; }
   .title--primary {
     color: #E3B873; }
+
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 12px; }
+  .nav__item {
+    margin-right: 1rem; } }
+
+@media screen and (max-width: 992px) {
+  .nav {
+    display: none; }
+  .hero__instagram {
+    display: none; }
+  .hero__content {
+    margin-left: 0; } }
+
+@media screen and (max-width: 570px) {
+  .contacts__phone {
+    margin-right: 0;
+    color: #fff;
+    text-decoration: none; }
+  .contacts__button {
+    display: none; }
+  .title {
+    font-size: 1.64rem;
+    line-height: 2.21rem; }
+  .hero__text {
+    font-size: 1.28rem;
+    line-height: 1.7rem;
+    margin-bottom: 2.28rem; }
+  .hero__content {
+    max-width: 22.86rem; }
+  .hero__button {
+    display: block;
+    min-width: 22.85rem;
+    margin-bottom: 1.85rem; }
+  .hero__scroll-down {
+    display: none; } }
+
+@media screen and (max-height: 520px) {
+  .hero__scroll-down {
+    display: none; } }
