--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -20,10 +20,11 @@
 
   &__content
     position: relative
-    max-width: 670px
+    max-width: 47.85rem
+    margin-left: 4.28rem
 
   &__text
-    font-size: 22px
+    font-size: 1.57rem
     font-weight: normal
     max-width: 600px
     line-height: 30px
@@ -42,8 +43,8 @@
     position: absolute
     left: 0
     bottom: 0
-    min-width: 247px
-    min-height: 97px
+    min-width: 17.6rem
+    min-height: 6.9rem
     background-color: $dark
     display: flex
     justify-content: center
@@ -86,7 +87,7 @@
 .title
   margin: 0
   font-family: 'Yeseva One', cursive
-  font-size: 40px
+  font-size: 2.857rem
   font-weight: normal
   line-height: 53px
   text-transform: uppercase
