--- a/css/style.css
+++ b/css/style.css
@@ -319,11 +319,11 @@ template {
   display: none; }
 
 .button {
-  padding: 13px 20px;
+  padding: 10px 17px;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
-  font-size: 0.93rem; }
+  font-size: 0.713rem; }
   .button:hover {
     cursor: pointer; }
   .button--primary {
@@ -387,22 +387,26 @@ html {
 
 .logo {
   color: #E3B873;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-size: 0.8rem; }
 
 .nav__item {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
   margin-right: 2.85rem;
-  transition: color 0.2s; }
+  transition: color 0.2s;
+  font-size: 0.8rem; }
   .nav__item:hover {
     color: #E3B873; }
 
 .phone {
-  color: #E3B873; }
+  color: #E3B873;
+  font-size: 0.8rem; }
 
 .contacts__phone {
-  margin-right: 45px; }
+  margin-right: 45px;
+  font-size: 0.8rem; }
 
 .hero {
   padding-top: 100px;
@@ -451,7 +455,9 @@ html {
     align-items: center;
     text-transform: uppercase;
     color: #fff;
-    text-decoration: none; }
+    text-decoration: none;
+    font-size: 0.8rem;
+    font-family: Yeseva One; }
     .hero__scroll-down::after {
       content: '';
       width: 30px;
@@ -473,7 +479,8 @@ html {
     color: #E3B873;
     text-decoration: none;
     transform: rotate(90deg);
-    line-height: 0.8; }
+    line-height: 0.8;
+    font-size: 0.8rem; }
     .instagram__link::after {
       content: '';
       width: 50px;
