--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -15,6 +15,7 @@
 .logo
   color: $primary
   text-transform: uppercase
+  font-size: 0.8rem
 
 .nav
   &__item
@@ -23,13 +24,16 @@
     text-transform: uppercase
     margin-right: 2.85rem
     transition: color 0.2s
+    font-size: 0.8rem
 
     &:hover
       color: $primary
 
 .phone
   color: $primary
+  font-size: 0.8rem
 
 .contacts
   &__phone
     margin-right: 45px
+    font-size: 0.8rem
