--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -52,6 +52,8 @@
     text-transform: uppercase
     color: $light
     text-decoration: none
+    font-size: 0.8rem
+    font-family: Yeseva One
     &::after
       content: ''
       width: 30px
@@ -75,6 +77,7 @@
     text-decoration: none
     transform: rotate(90deg)
     line-height: 0.8
+    font-size: 0.8rem
 
 
     &::after
