--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -17,6 +17,19 @@
     &__content
       margin-left: 0
 
+@media screen and ( max-width: 810px )
+  .row
+    flex-direction: column
+    align-items: center
+
+  .types
+    &__card
+      margin-bottom: 5rem
+
+  .card
+    &__text
+      margin-left: 0
+
 @media screen and ( max-width: 570px )
   .contacts
     &__phone
