--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -8,7 +8,11 @@ body
 html
   font-size: 14px
 
+img
+  max-width: 100%
+
 .section
+  padding: 60px 0
   &-title
     text-align: center
     text-transform: uppercase
