refact: some sizes changed for PP

--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -20,14 +20,14 @@
 
   &__content
     position: relative
-    max-width: 47.85rem
+    max-width: 37rem
     margin-left: 4.28rem
 
   &__text
-    font-size: 1.57rem
+    font-size: 1.1rem
     font-weight: normal
-    max-width: 600px
-    line-height: 30px
+    max-width: 400px
+    line-height: 25px
 
   &__instagram
     max-width: 80px
@@ -37,7 +37,9 @@
     top: 0
 
   &__button
-    margin-right: 20px
+    margin-right: 1.07rem
+    min-width: 12rem
+    min-height: 3rem
 
   &__scroll-down
     position: absolute
@@ -52,12 +54,12 @@
     text-transform: uppercase
     color: $light
     text-decoration: none
-    font-size: 0.8rem
+    font-size: 0.7rem
     font-family: Yeseva One
     &::after
       content: ''
-      width: 30px
-      height: 30px
+      width: 25px
+      height: 25px
       border: 2px solid $primary
       border-radius: 50%
       margin-left: 12px
@@ -90,9 +92,9 @@
 .title
   margin: 0
   font-family: 'Yeseva One', cursive
-  font-size: 2.857rem
+  font-size: 2.3rem
   font-weight: normal
-  line-height: 53px
+  line-height: 45px
   text-transform: uppercase
 
   &--primary
