--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ img {
     text-transform: uppercase;
     font-family: 'Yeseva One', cursive;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 0.8rem;
     line-height: 28px; }
     .section-title__img {
       display: flex;
@@ -371,9 +371,9 @@ img {
       align-items: center; }
       .section-title__img::after, .section-title__img::before {
         content: '';
-        margin: 0 10px;
-        height: 2px;
-        width: 32px;
+        margin: 0 8px;
+        height: 1px;
+        width: 26px;
         background-color: #E3B873; }
 
 .header {
@@ -393,15 +393,15 @@ img {
 .logo {
   color: #E3B873;
   text-transform: uppercase;
-  font-size: 0.8rem; }
+  font-size: 0.7rem; }
 
 .nav__item {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  margin-right: 2.85rem;
+  margin-right: 2.1rem;
   transition: color 0.2s;
-  font-size: 0.8rem; }
+  font-size: 0.7rem; }
   .nav__item:hover {
     color: #E3B873; }
 
@@ -433,13 +433,13 @@ img {
     background-color: rgba(19, 19, 19, 0.7); }
   .hero__content {
     position: relative;
-    max-width: 47.85rem;
+    max-width: 37rem;
     margin-left: 4.28rem; }
   .hero__text {
-    font-size: 1.57rem;
+    font-size: 1.1rem;
     font-weight: normal;
-    max-width: 600px;
-    line-height: 30px; }
+    max-width: 400px;
+    line-height: 25px; }
   .hero__instagram {
     max-width: 80px;
     height: 100%;
@@ -447,7 +447,9 @@ img {
     left: 0;
     top: 0; }
   .hero__button {
-    margin-right: 20px; }
+    margin-right: 1.07rem;
+    min-width: 12rem;
+    min-height: 3rem; }
   .hero__scroll-down {
     position: absolute;
     left: 0;
@@ -461,12 +463,12 @@ img {
     text-transform: uppercase;
     color: #fff;
     text-decoration: none;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     font-family: Yeseva One; }
     .hero__scroll-down::after {
       content: '';
-      width: 30px;
-      height: 30px;
+      width: 25px;
+      height: 25px;
       border: 2px solid #E3B873;
       border-radius: 50%;
       margin-left: 12px;
@@ -496,15 +498,16 @@ img {
 .title {
   margin: 0;
   font-family: 'Yeseva One', cursive;
-  font-size: 2.857rem;
+  font-size: 2.3rem;
   font-weight: normal;
-  line-height: 53px;
+  line-height: 45px;
   text-transform: uppercase; }
   .title--primary {
     color: #E3B873; }
 
 .types__section-title {
-  margin-bottom: 1.6rem; }
+  margin-bottom: 1.6rem;
+  font-size: 0.76rem; }
 
 .row {
   display: flex;
@@ -528,7 +531,7 @@ img {
   margin-top: 0;
   font-family: 'Yeseva One', cursive;
   font-weight: normal;
-  font-size: 1.28rem;
+  font-size: 1.03rem;
   line-height: 1.78rem; }
 
 .card__list {
@@ -536,8 +539,8 @@ img {
   padding: 0 0 4.5rem 1rem;
   font-family: FuturaBookC;
   font-weight: normal;
-  font-size: 1.07rem;
-  line-height: 1.78rem;
+  font-size: 0.8rem;
+  line-height: 1.5rem;
   color: #959595; }
 
 .card__pricetag {
@@ -546,24 +549,24 @@ img {
   bottom: -1.78rem;
   font-family: 'Yeseva One', cursive;
   font-weight: normal;
-  font-size: 1.28rem;
+  font-size: 1rem;
   line-height: 1.78rem;
   text-transform: uppercase;
   background-color: #E3B873;
   color: #fff;
-  padding: 1.214rem 1.285rem; }
+  padding: 0.75rem 4.6rem 0.75rem 2rem; }
 
 .design-project__description {
   display: flex;
   justify-content: center;
-  margin-bottom: 2.78rem; }
+  margin-bottom: 1.5rem; }
 
 .description__text {
-  max-width: 60.57rem;
+  max-width: 43rem;
   font-family: 'FuturaBookC', sans-serif;
   font-weight: normal;
-  font-size: 1.42rem;
-  line-height: 1.92rem;
+  font-size: 1rem;
+  line-height: 1.7rem;
   text-align: center;
   color: #131313; }
 
