--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,7 +18,7 @@ img
     text-transform: uppercase
     font-family: 'Yeseva One', cursive
     font-weight: normal
-    font-size: 20px
+    font-size: 0.8rem
     line-height: 28px
 
     &__img
@@ -27,7 +27,7 @@ img
       align-items: center
       &::after, &::before
         content: ''
-        margin: 0 10px
-        height: 2px
-        width: 32px
+        margin: 0 8px
+        height: 1px
+        width: 26px
         background-color: $primary
