--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -1,6 +1,7 @@
 .types
   &__section-title
     margin-bottom: 1.6rem
+    font-size: 0.76rem
   
 .row
   display: flex
@@ -26,16 +27,16 @@
     margin-top: 0
     font-family: 'Yeseva One', cursive
     font-weight: normal
-    font-size: 1.28rem
+    font-size: 1.03rem
     line-height: 1.78rem
 
   &__list
     margin: 0
-    padding: 0 0 4.5rem 1rem
+    padding: 1rem 0 4.5rem 1rem
     font-family: FuturaBookC
     font-weight: normal
-    font-size: 1.07rem
-    line-height: 1.78rem
+    font-size: 0.8rem
+    line-height: 1.5rem
     color: $secondary
 
   &__pricetag
@@ -44,12 +45,12 @@
     bottom: -1.78rem
     font-family: 'Yeseva One', cursive
     font-weight: normal
-    font-size: 1.28rem
+    font-size: 1rem
     line-height: 1.78rem
     text-transform: uppercase
     background-color: $primary
     color: $light
-    padding: 1.214rem 1.285rem
+    padding: 0.75rem 4.6rem 0.75rem 2rem
 
 
   
