--- a/css/style.css
+++ b/css/style.css
@@ -512,10 +512,11 @@ img {
 .row {
   display: flex;
   align-items: flex-start;
-  justify-content: space-around; }
+  justify-content: center; }
 
 .col {
-  flex-basis: 32%; }
+  margin-right: 1rem;
+  margin-left: 1rem; }
 
 .card__text {
   position: relative;
@@ -523,7 +524,7 @@ img {
   margin-top: -8rem;
   padding-top: 1.79rem;
   padding-left: 2.14rem;
-  max-width: 23rem;
+  max-width: 19rem;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
   background-color: #fff; }
 
@@ -536,8 +537,8 @@ img {
 
 .card__list {
   margin: 0;
-  padding: 0 0 4.5rem 1rem;
-  font-family: FuturaBookC;
+  padding: 0 0 3rem 1rem;
+  font-family: 'FuturaBookC', sans-serif;
   font-weight: normal;
   font-size: 0.8rem;
   line-height: 1.5rem;
@@ -555,6 +556,9 @@ img {
   background-color: #E3B873;
   color: #fff;
   padding: 0.75rem 4.6rem 0.75rem 2rem; }
+
+.card__img {
+  max-width: 22.5rem; }
 
 .design-project__description {
   display: flex;
