--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -2,14 +2,17 @@
   &__section-title
     margin-bottom: 1.6rem
     font-size: 0.76rem
+
+    
   
 .row
   display: flex
   align-items: flex-start
-  justify-content: space-around
+  justify-content: center
 
 .col
-  flex-basis: 32%
+  margin-right: 1rem
+  margin-left: 1rem
 
 .card
 
@@ -19,7 +22,7 @@
     margin-top: -8rem
     padding-top: 1.79rem
     padding-left: 2.14rem
-    max-width: 23rem
+    max-width: 19rem
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
     background-color: $light
 
@@ -32,8 +35,8 @@
 
   &__list
     margin: 0
-    padding: 1rem 0 4.5rem 1rem
-    font-family: FuturaBookC
+    padding: 0 0 3rem 1rem
+    font-family: 'FuturaBookC', sans-serif
     font-weight: normal
     font-size: 0.8rem
     line-height: 1.5rem
@@ -51,6 +54,9 @@
     background-color: $primary
     color: $light
     padding: 0.75rem 4.6rem 0.75rem 2rem
+
+  &__img
+    max-width: 22.5rem
 
 
   
