--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -21,3 +21,40 @@
     border: 1px solid $light
     background-color: transparent
     color: $light
+
+.label
+  font-family: 'FuturaBookC', sans-serif
+  font-size: 1.07rem
+  &--light
+    color: rgba($light, 0.5)
+
+.input
+  background-color: transparent
+  border: none
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+  font-size: 1.285rem
+  color: $light
+  padding: 0.5rem 0
+  &::placeholder
+    color: $light
+
+.policy
+  &__checkbox
+    visibility: hidden
+    opacity: 0
+    &:checked +
+      .policy__label
+        &::before
+          background: $primary url('../img/check_mark.svg') no-repeat center / 0.8rem
+      
+  &__label
+    display: flex
+    align-items: center
+    &::before
+      content: ''
+      width: 18px
+      height: 18px
+      border: 1px solid $primary
+      border-radius: 1px
+      cursor: pointer
+      margin-right: 0.64rem
