--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,5 +9,6 @@
 @import 'templates/control'
 @import 'templates/types'
 @import 'templates/design_project'
+@import 'templates/modal'
 
 @import 'media'
