--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,18 @@ template {
   max-width: 1256px;
   margin: auto; }
 
+.row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center; }
+
+.col-30 {
+  margin-right: 1rem;
+  margin-left: 1rem; }
+
+.col-50 {
+  width: 50%; }
+
 *, *:before, *:after {
   box-sizing: border-box; }
 
@@ -400,13 +412,37 @@ img {
 
 .section {
   padding: 60px 0; }
+  .section--dark {
+    background-color: #131313;
+    color: #fff; }
   .section-title {
-    text-align: center;
-    text-transform: uppercase;
-    font-family: 'Yeseva One', cursive;
-    font-weight: normal;
-    font-size: 0.8rem;
-    line-height: 28px; }
+    text-align: center; }
+    .section-title--left {
+      text-align: left; }
+    .section-title__text {
+      font-size: 1.28rem;
+      line-height: 2.07rem;
+      max-width: 31.57rem; }
+    .section-title__heading {
+      text-transform: uppercase;
+      font-family: 'Yeseva One', cursive;
+      font-weight: normal;
+      font-size: 0.8rem;
+      line-height: 138%; }
+      .section-title__heading--primary {
+        color: #E3B873;
+        font-size: 1.92rem;
+        line-height: 2.64rem;
+        font-weight: normal; }
+    .section-title__word {
+      display: flex;
+      align-items: center; }
+      .section-title__word::after {
+        content: '';
+        width: 92px;
+        height: 2px;
+        background-color: #E3B873;
+        margin-left: 2rem; }
     .section-title__img {
       display: flex;
       justify-content: center;
@@ -473,6 +509,15 @@ img {
     width: 100%;
     height: 100%;
     background-color: rgba(19, 19, 19, 0.7); }
+  .hero::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 3.46rem;
+    background-color: #131313; }
   .hero__content {
     position: relative;
     max-width: 37rem;
@@ -498,6 +543,7 @@ img {
     bottom: 0;
     min-width: 17.6rem;
     min-height: 6.9rem;
+    z-index: 10;
     background-color: #131313;
     display: flex;
     justify-content: center;
@@ -547,18 +593,59 @@ img {
   .title--primary {
     color: #E3B873; }
 
+.swiper-slide {
+  display: flex;
+  flex-wrap: wrap; }
+  .swiper-slide__text {
+    flex-basis: 50%;
+    margin-bottom: 2.42rem;
+    padding-bottom: 2rem; }
+  .swiper-slide__heading {
+    font-size: 1.28rem;
+    color: #E3B873;
+    font-family: 'Yeseva One', cursive;
+    font-weight: normal;
+    line-height: 1.78rem;
+    text-transform: uppercase;
+    margin-bottom: 0.64rem; }
+  .swiper-slide__value {
+    font-weight: normal;
+    font-size: 1.1rem;
+    line-height: 1.42rem; }
+
+.swiper-pagination-bullet {
+  background: rgba(255, 255, 255, 0.7); }
+  .swiper-pagination-bullet-active {
+    background: #fff; }
+
+.swiper-button-prev {
+  background: url("../img/arrow-left.svg") no-repeat center;
+  background-size: 42px;
+  width: 42px;
+  height: 14px;
+  bottom: 0;
+  top: auto;
+  left: 0; }
+  .swiper-button-prev::after {
+    display: none; }
+
+.swiper-button-next {
+  background: url("../img/arrow-right.svg") no-repeat center;
+  background-size: 42px;
+  width: 42px;
+  height: 14px;
+  bottom: 0;
+  top: auto; }
+  .swiper-button-next::after {
+    display: none; }
+
+.swiper-container-horizontal > .swiper-pagination-bullets {
+  width: auto;
+  bottom: 0; }
+
 .types__section-title {
   margin-bottom: 1.6rem;
   font-size: 0.76rem; }
-
-.row {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center; }
-
-.col {
-  margin-right: 1rem;
-  margin-left: 1rem; }
 
 .card__text {
   position: relative;
