--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -2,3 +2,15 @@
   width: 85%
   max-width: 1256px
   margin: auto
+
+.row
+  display: flex
+  align-items: flex-start
+  justify-content: center
+
+.col
+  &-30
+    margin-right: 1rem
+    margin-left: 1rem
+  &-50
+    width: 50%
