--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -8,7 +8,6 @@
   flex-direction: column
   justify-content: center
   justify-content: flex-start
-
   &::before
     content: ''
     position: absolute
@@ -17,6 +16,15 @@
     width: 100%
     height: 100%
     background-color: rgba($dark, 0.7)
+  &::after
+    content: ''
+    position: absolute
+    width: 100%
+    bottom: 0
+    left: 0
+    right: 0
+    height: 3.46rem
+    background-color: $dark
 
   &__content
     position: relative
@@ -47,6 +55,7 @@
     bottom: 0
     min-width: 17.6rem
     min-height: 6.9rem
+    z-index: 10
     background-color: $dark
     display: flex
     justify-content: center
