--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,6 +18,8 @@ img
     color: $light
   &-title
     text-align: center
+    &--light
+      color: $light
     &--left
       text-align: left
     &__text
@@ -28,7 +30,7 @@ img
       text-transform: uppercase
       font-family: 'Yeseva One', cursive
       font-weight: normal
-      font-size: 0.8rem
+      font-size: 1.15rem
       line-height: 138%
       &--primary
         color: $primary
