--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ template {
     color: #fff; }
 
 .label {
-  font-family: 'FuturaBookC', sans-serif;
+  font-family: 'Futura Book', sans-serif;
   font-size: 1.07rem; }
   .label--light {
     color: rgba(255, 255, 255, 0.5); }
@@ -351,15 +351,31 @@ template {
   font-size: 1.285rem;
   color: #fff;
   padding: 0.5rem 0; }
-  .input::-webkit-input-placeholder {
+  .input--dark {
+    border: none;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.5);
+    padding-left: 0;
+    padding-bottom: 0.6rem;
+    margin-top: 0.5rem; }
+    .input--dark::-webkit-input-placeholder {
+      color: #131313; }
+    .input--dark::-moz-placeholder {
+      color: #131313; }
+    .input--dark:-ms-input-placeholder {
+      color: #131313; }
+    .input--dark::-ms-input-placeholder {
+      color: #131313; }
+    .input--dark::placeholder {
+      color: #131313; }
+  .input--light::-webkit-input-placeholder {
     color: #fff; }
-  .input::-moz-placeholder {
+  .input--light::-moz-placeholder {
     color: #fff; }
-  .input:-ms-input-placeholder {
+  .input--light:-ms-input-placeholder {
     color: #fff; }
-  .input::-ms-input-placeholder {
+  .input--light::-ms-input-placeholder {
     color: #fff; }
-  .input::placeholder {
+  .input--light::placeholder {
     color: #fff; }
 
 .policy__checkbox {
@@ -417,6 +433,8 @@ img {
     color: #fff; }
   .section-title {
     text-align: center; }
+    .section-title--light {
+      color: #fff; }
     .section-title--left {
       text-align: left; }
     .section-title__text {
@@ -427,7 +445,7 @@ img {
       text-transform: uppercase;
       font-family: 'Yeseva One', cursive;
       font-weight: normal;
-      font-size: 0.8rem;
+      font-size: 1.15rem;
       line-height: 138%; }
       .section-title__heading--primary {
         color: #E3B873;
@@ -593,13 +611,17 @@ img {
   .title--primary {
     color: #E3B873; }
 
+.projects {
+  padding-bottom: 30rem; }
+
 .swiper-slide {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  padding-bottom: 5rem; }
   .swiper-slide__text {
     flex-basis: 50%;
-    margin-bottom: 2.42rem;
-    padding-bottom: 2rem; }
+    margin-bottom: 1rem;
+    margin-right: -5rem; }
   .swiper-slide__heading {
     font-size: 1.28rem;
     color: #E3B873;
@@ -607,7 +629,7 @@ img {
     font-weight: normal;
     line-height: 1.78rem;
     text-transform: uppercase;
-    margin-bottom: 0.64rem; }
+    margin-bottom: 0.4rem; }
   .swiper-slide__value {
     font-weight: normal;
     font-size: 1.1rem;
@@ -620,9 +642,9 @@ img {
 
 .swiper-button-prev {
   background: url("../img/arrow-left.svg") no-repeat center;
-  background-size: 42px;
-  width: 42px;
-  height: 14px;
+  background-size: 3rem;
+  width: 3rem;
+  height: 1rem;
   bottom: 0;
   top: auto;
   left: 0; }
@@ -631,9 +653,9 @@ img {
 
 .swiper-button-next {
   background: url("../img/arrow-right.svg") no-repeat center;
-  background-size: 42px;
-  width: 42px;
-  height: 14px;
+  background-size: 3rem;
+  width: 3rem;
+  height: 1rem;
   bottom: 0;
   top: auto; }
   .swiper-button-next::after {
@@ -642,6 +664,80 @@ img {
 .swiper-container-horizontal > .swiper-pagination-bullets {
   width: auto;
   bottom: 0; }
+
+.control__video {
+  display: flex;
+  margin: auto;
+  margin-bottom: 3.6rem;
+  position: relative;
+  max-width: 46.5rem;
+  min-height: 25rem;
+  background: #131313 url("../img/video-mask.jpg") center no-repeat;
+  box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15); }
+  .control__video::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); }
+
+.control__section-title {
+  margin-bottom: 2.21rem;
+  margin-top: -30rem; }
+
+.control__text {
+  max-width: 35rem;
+  margin: auto;
+  text-align: center;
+  font-weight: normal;
+  font-size: 1.15rem;
+  line-height: 2rem;
+  color: #131313; }
+  .control__text::before {
+    content: '';
+    display: block;
+    width: 55px;
+    height: 2px;
+    margin: auto;
+    margin-bottom: 1.8rem;
+    background-color: #E3B873;
+    border-radius: 30px; }
+
+.control__form {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
+  max-width: 55rem;
+  margin-top: 3.5rem; }
+
+.control__input-group {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 30%;
+  margin-right: 2rem; }
+
+.control__policy {
+  flex-basis: 100%;
+  margin-top: 1rem; }
+  .control__policy-label {
+    justify-content: center; }
+
+.control__button {
+  padding: 1rem 3.4rem;
+  font-size: 0.95rem; }
+
+.control__label {
+  font-family: 'Futura Book', sans-serif;
+  margin-bottom: -0.8rem;
+  font-weight: normal;
+  font-size: 0.75rem;
+  line-height: 1.42rem;
+  color: rgba(54, 54, 54, 0.5); }
+
+.video__play {
+  position: relative;
+  margin: auto; }
 
 .types__section-title {
   margin-bottom: 1.6rem;
@@ -659,6 +755,7 @@ img {
 
 .card__title {
   margin-top: 0;
+  margin-bottom: -0.1rem;
   font-family: 'Yeseva One', cursive;
   font-weight: normal;
   font-size: 1.03rem;
@@ -667,7 +764,7 @@ img {
 .card__list {
   margin: 0;
   padding: 0 0 3rem 1rem;
-  font-family: 'FuturaBookC', sans-serif;
+  font-family: 'Futura Book', sans-serif;
   font-weight: normal;
   font-size: 0.8rem;
   line-height: 1.5rem;
@@ -758,6 +855,14 @@ img {
   .modal__button {
     align-self: flex-end; }
 
+@media screen and (min-width: 1400px) {
+  html {
+    font-size: 16px; } }
+
+@media screen and (max-width: 1399px) {
+  html {
+    font-size: 14px; } }
+
 @media screen and (max-width: 1200px) {
   html {
     font-size: 12px; }
@@ -773,6 +878,8 @@ img {
     margin-left: 0; } }
 
 @media screen and (max-width: 810px) {
+  .col-50 {
+    width: 90%; }
   .row {
     flex-direction: column;
     align-items: center; }
@@ -782,6 +889,10 @@ img {
     margin-left: 0; } }
 
 @media screen and (max-width: 570px) {
+  html {
+    font-size: 10px; }
+  .col-50 {
+    width: 90%; }
   .contacts__phone {
     margin-right: 0;
     color: #fff;
@@ -802,7 +913,19 @@ img {
     min-width: 22.85rem;
     margin-bottom: 1.85rem; }
   .hero__scroll-down {
-    display: none; } }
+    display: none; }
+  .swiper-slide__heading {
+    font-size: 1.1rem; } }
+
+@media screen and (max-width: 440px) {
+  .control__input-group {
+    flex-basis: 48%; }
+  .control__policy {
+    flex-basis: 49%; }
+  .control__button {
+    flex-basis: 49%;
+    margin-top: 2rem;
+    order: 2; } }
 
 @media screen and (max-height: 520px) {
   .hero__scroll-down {
