--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,3 +1,12 @@
+@media screen and ( min-width: 1400px  )
+  html
+    font-size: 16px
+
+@media screen and ( max-width: 1399px )
+  html
+    font-size: 14px
+  
+  
 @media screen and ( max-width: 1200px )
   html
     font-size: 12px
@@ -18,6 +27,10 @@
       margin-left: 0
 
 @media screen and ( max-width: 810px )
+  .col
+    &-50
+      width: 90%
+
   .row
     flex-direction: column
     align-items: center
@@ -31,6 +44,15 @@
       margin-left: 0
 
 @media screen and ( max-width: 570px )
+
+  html
+    font-size: 10px
+        
+  
+  .col
+    &-50
+      width: 90%
+
   .contacts
     &__phone
       margin-right: 0
@@ -56,6 +78,24 @@
       margin-bottom: 1.85rem
     &__scroll-down
       display: none
+
+  .swiper
+    &-slide
+      &__heading
+        font-size: 1.1rem
+
+@media screen and ( max-width: 440px  )
+  .control
+    &__input-group
+      flex-basis: 48%
+    &__policy
+      flex-basis: 49%
+    &__button
+      flex-basis: 49%
+      margin-top: 2rem
+      order: 2
+  
+
 
 @media screen and ( max-height: 520px  )
   .hero
