--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -17,6 +17,7 @@
 
   &__title
     margin-top: 0
+    margin-bottom: -0.1rem
     font-family: 'Yeseva One', cursive
     font-weight: normal
     font-size: 1.03rem
@@ -25,7 +26,7 @@
   &__list
     margin: 0
     padding: 0 0 3rem 1rem
-    font-family: 'FuturaBookC', sans-serif
+    font-family: 'Futura Book', sans-serif
     font-weight: normal
     font-size: 0.8rem
     line-height: 1.5rem
