--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,15 @@ template {
     border-radius: 1px;
     cursor: pointer;
     margin-right: 0.64rem; }
+  .policy__label--center {
+    justify-content: center;
+    font-size: 0.8rem; }
+
+label.invalid {
+  color: tomato; }
+
+input.invalid {
+  border-bottom: 1px solid tomato; }
 
 .container {
   width: 85%;
@@ -800,6 +809,51 @@ img {
   text-align: center;
   color: #131313; }
 
+.footer {
+  background: #131313 url("../img/footer-bg.jpg") no-repeat center/cover; }
+  .footer__wrap {
+    background: url("../img/bg_lines.svg") no-repeat center;
+    background-color: #181818;
+    max-width: 45rem;
+    margin: auto;
+    margin-bottom: 3rem;
+    padding: 1rem; }
+  .footer__title {
+    margin-bottom: 1rem;
+    font-family: 'Yeseva One', cursive;
+    font-weight: normal;
+    font-size: 1.1rem;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff; }
+  .footer__form {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 28rem;
+    margin: auto;
+    justify-content: space-between; }
+    .footer__form_label {
+      font-size: 0.8rem; }
+  .footer__input {
+    font-size: 0.8rem; }
+  .footer__input-group {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 45%;
+    margin-bottom: 2rem; }
+    .footer__input-group--full-width {
+      flex-basis: 100%;
+      margin-bottom: 1rem; }
+  .footer__policy {
+    flex-basis: 100%;
+    margin-bottom: 3rem; }
+  .footer__button {
+    margin: auto;
+    padding: 1rem 3rem; }
+  .footer-menu {
+    background-color: #131313;
+    padding: 2rem 0; }
+
 .modal {
   opacity: 0;
   visibility: hidden;
@@ -846,10 +900,12 @@ img {
   .modal__form {
     display: flex;
     flex-direction: column; }
-  .modal__input {
+  .modal__input-group {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 3.428rem; }
-    .modal__input:last-of-type {
-      margin-bottom: 1rem; }
+  .modal__input:last-of-type {
+    margin-bottom: 1rem; }
   .modal__policy {
     margin-bottom: 2.7rem; }
   .modal__button {
