--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -67,3 +67,13 @@
       border-radius: 1px
       cursor: pointer
       margin-right: 0.64rem
+    &--center
+      justify-content: center
+      font-size: 0.8rem
+
+label
+  &.invalid
+    color: tomato
+input
+  &.invalid
+    border-bottom: 1px solid tomato
