--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -72,8 +72,8 @@
   &-link
     margin-top: 2rem
     margin-bottom: 2rem
-    height: 2rem
-    width: 2rem
+    height: 30px
+    width: 30px
     &__email
       background: url('../img/footer_icon_email.svg') no-repeat center
       margin-right: 1rem
