--- a/css/style.css
+++ b/css/style.css
@@ -813,22 +813,13 @@ img {
 
 .footer {
   background: url("../img/footer-bg.jpg") no-repeat center/cover;
-  position: relative;
-  z-index: -3; }
-  .footer::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(24, 24, 24, 0.5);
-    z-index: -1; }
+  position: relative; }
   .footer__wrap {
     background: url("../img/bg_lines.svg") no-repeat center;
     background-color: #181818;
     max-width: 45rem;
     margin: auto;
     margin-bottom: 3rem;
-    margin-top: -15rem;
     padding: 1rem; }
   .footer__title {
     margin-bottom: 1rem;
@@ -837,7 +828,8 @@ img {
     font-size: 1.1rem;
     text-align: center;
     text-transform: uppercase;
-    color: #fff; }
+    color: #fff;
+    z-index: 100; }
     .footer__title--primary {
       margin: auto;
       max-width: 28rem;
