--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -45,7 +45,7 @@
   &__checkbox
     visibility: hidden
     opacity: 0
-    &:checked +
+    &:checked ~
       .policy__label
         &::before
           background: $primary url('../img/check_mark.svg') no-repeat center / 0.8rem
@@ -65,9 +65,8 @@
       justify-content: center
       font-size: 0.8rem
 
-label
-  &.invalid
-    color: tomato
+.invalid
+  color: tomato
 input
   &.invalid
     border-bottom: 1px solid tomato
