--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -39,13 +39,13 @@
     flex-wrap: wrap
     margin: auto
     justify-content: center
-    max-width: 55rem
+    max-width: 45rem
     margin-top: 3.5rem
   &__input-group
     display: flex
     flex-direction: column
     flex-basis: 30%
-    margin-right: 2rem
+    margin-right: 3rem
   &__policy
     flex-basis: 100%
     margin-top: 1rem
@@ -66,3 +66,5 @@
   &__play
     position: relative
     margin: auto
+    width: 8rem
+    height: 8rem
