--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,11 +1,11 @@
 .header
   background-color: $dark
-  padding: 24px 0
+  padding: 1.5rem 0
   position: fixed
   left: 0
   top: 0
   width: 100%
-  z-index: 10
+  z-index: 11
 
 .menu
   display: flex
@@ -13,24 +13,26 @@
   align-items: center
 
 .logo
-  color: $primary
   text-transform: uppercase
-  font-size: 0.7rem
+  font-size: 0.86rem
+  &__link
+    text-decoration: none
+    color: $primary
 
 .nav
   &__item
     text-decoration: none
     color: $light
     text-transform: uppercase
-    margin-right: 2.1rem
+    margin-right: 2.3rem
     transition: color 0.2s
-    font-size: 0.7rem
+    font-size: 0.8rem
 
 .phone
   color: $primary
-  font-size: 0.8rem
+  font-size: 0.6rem
 
 .contacts
   &__phone
     margin-right: 45px
-    font-size: 0.8rem
+    font-size: 1rem
