--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -9,6 +9,7 @@
     position: relative
     margin: 0 auto
     margin-top: -8rem
+    margin-bottom: 3rem
     padding-top: 1.79rem
     padding-left: 2.14rem
     max-width: 19rem
