refact: fixed pp

--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,16 +1,25 @@
-.container
+.hero__container
   width: 85%
   max-width: 1256px
   margin: auto
+
+.container
+  padding: 0 5.71rem
 
 .row
   display: flex
   align-items: flex-start
   justify-content: center
+  overflow: hidden
 
 .col
   &-30
     margin-right: 1rem
     margin-left: 1rem
+    overflow: hidden
+  &-40
+    width: 40%
   &-50
     width: 50%
+  &-60
+    width: 60%
