--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -14,7 +14,7 @@
 
 .logo
   text-transform: uppercase
-  font-size: 0.86rem
+  font-size: 1.05rem
   &__link
     text-decoration: none
     color: $primary
@@ -24,15 +24,17 @@
     text-decoration: none
     color: $light
     text-transform: uppercase
-    margin-right: 2.3rem
+    margin-right: 2.7rem
     transition: color 0.2s
-    font-size: 0.8rem
+    font-size: 1.02rem
 
 .phone
   color: $primary
-  font-size: 0.6rem
+  font-size: 1rem
 
 .contacts
   &__phone
     margin-right: 45px
+    font-size: 1rem
+  &__button
     font-size: 1rem
