--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -28,14 +28,15 @@
 
   &__content
     position: relative
-    max-width: 37rem
+    max-width: 34rem
     margin-left: 4.28rem
 
   &__text
-    font-size: 1.1rem
+    margin-top: 1rem
+    font-size: 1.5rem
     font-weight: normal
-    max-width: 400px
-    line-height: 25px
+    max-width: 35rem
+    line-height: 2.05rem
 
   &__instagram
     max-width: 80px
@@ -46,8 +47,10 @@
 
   &__button
     margin-right: 1.07rem
-    min-width: 12rem
-    min-height: 3rem
+    margin-bottom: 1rem
+    min-width: 15rem
+    min-height: 3.7rem
+    font-size: 1rem
 
   &__scroll-down
     position: absolute
@@ -63,16 +66,17 @@
     text-transform: uppercase
     color: $light
     text-decoration: none
-    font-size: 0.7rem
+    font-size: 0.85rem
     font-family: Yeseva One
     &::after
       content: ''
-      width: 25px
-      height: 25px
+      width: 29px
+      height: 29px
       border: 2px solid $primary
       border-radius: 50%
-      margin-left: 12px
-      background: url('../img/Vector.svg') no-repeat center
+      margin-left: 17px
+      background: url('../img/Vector.svg') no-repeat center / cover
+      background-size: 13px
 
 .instagram
   background-color: $dark
@@ -87,8 +91,8 @@
     color: $primary
     text-decoration: none
     transform: rotate(90deg)
-    line-height: 0.8
-    font-size: 0.8rem
+    line-height: 0.8rem
+    font-size: 1.05rem
 
 
     &::after
@@ -96,14 +100,14 @@
       width: 50px
       height: 1px
       background-color: $primary
-      margin-left: 8px
+      margin-left: 14px
 
 .title
   margin: 0
   font-family: 'Yeseva One', cursive
-  font-size: 2.3rem
+  font-size: 3rem
   font-weight: normal
-  line-height: 45px
+  line-height: 3.92rem
   text-transform: uppercase
 
   &--primary
