--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@
   src: url("../fonts/futura/FuturaBookC.woff") format("woff"), url("../fonts/futura/FuturaBookC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: wrap; }
+  font-display: swap; }
 
 @font-face {
   font-family: 'Futura Demi';
   src: url("../fonts/futura/FuturaDemiC.woff") format("woff"), url("../fonts/futura/FuturaDemiC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: wrap; }
+  font-display: swap; }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -401,22 +401,33 @@ template {
 input.invalid {
   border-bottom: 1px solid tomato; }
 
-.container {
+.hero__container {
   width: 85%;
   max-width: 1256px;
   margin: auto; }
 
+.container {
+  padding: 0 5.71rem; }
+
 .row {
   display: flex;
   align-items: flex-start;
-  justify-content: center; }
+  justify-content: center;
+  overflow: hidden; }
 
 .col-30 {
   margin-right: 1rem;
-  margin-left: 1rem; }
+  margin-left: 1rem;
+  overflow: hidden; }
+
+.col-40 {
+  width: 40%; }
 
 .col-50 {
   width: 50%; }
+
+.col-60 {
+  width: 60%; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
@@ -432,7 +443,7 @@ img {
   max-width: 100%; }
 
 .section {
-  padding: 60px 0; }
+  padding: 40px 0; }
   .section--dark {
     background-color: #131313;
     color: #fff; }
@@ -450,7 +461,7 @@ img {
       text-transform: uppercase;
       font-family: 'Yeseva One', cursive;
       font-weight: normal;
-      font-size: 1.15rem;
+      font-size: 1.4rem;
       line-height: 138%; }
       .section-title__heading--primary {
         color: #E3B873;
@@ -473,8 +484,8 @@ img {
       .section-title__img::after, .section-title__img::before {
         content: '';
         margin: 0 8px;
-        height: 1px;
-        width: 26px;
+        height: 2px;
+        width: 30px;
         background-color: #E3B873; }
 
 .header {
@@ -493,7 +504,7 @@ img {
 
 .logo {
   text-transform: uppercase;
-  font-size: 0.86rem; }
+  font-size: 1.05rem; }
   .logo__link {
     text-decoration: none;
     color: #E3B873; }
@@ -502,16 +513,19 @@ img {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  margin-right: 2.3rem;
+  margin-right: 2.7rem;
   transition: color 0.2s;
-  font-size: 0.8rem; }
+  font-size: 1.02rem; }
 
 .phone {
   color: #E3B873;
-  font-size: 0.6rem; }
+  font-size: 1rem; }
 
 .contacts__phone {
   margin-right: 45px;
+  font-size: 1rem; }
+
+.contacts__button {
   font-size: 1rem; }
 
 .hero {
@@ -543,13 +557,14 @@ img {
     background-color: #131313; }
   .hero__content {
     position: relative;
-    max-width: 37rem;
+    max-width: 34rem;
     margin-left: 4.28rem; }
   .hero__text {
-    font-size: 1.1rem;
+    margin-top: 1rem;
+    font-size: 1.5rem;
     font-weight: normal;
-    max-width: 400px;
-    line-height: 25px; }
+    max-width: 35rem;
+    line-height: 2.05rem; }
   .hero__instagram {
     max-width: 80px;
     height: 100%;
@@ -558,8 +573,10 @@ img {
     top: 0; }
   .hero__button {
     margin-right: 1.07rem;
-    min-width: 12rem;
-    min-height: 3rem; }
+    margin-bottom: 1rem;
+    min-width: 15rem;
+    min-height: 3.7rem;
+    font-size: 1rem; }
   .hero__scroll-down {
     position: absolute;
     left: 0;
@@ -574,16 +591,17 @@ img {
     text-transform: uppercase;
     color: #fff;
     text-decoration: none;
-    font-size: 0.7rem;
+    font-size: 0.85rem;
     font-family: Yeseva One; }
     .hero__scroll-down::after {
       content: '';
-      width: 25px;
-      height: 25px;
+      width: 29px;
+      height: 29px;
       border: 2px solid #E3B873;
       border-radius: 50%;
-      margin-left: 12px;
-      background: url("../img/Vector.svg") no-repeat center; }
+      margin-left: 17px;
+      background: url("../img/Vector.svg") no-repeat center/cover;
+      background-size: 13px; }
 
 .instagram {
   background-color: #131313;
@@ -597,36 +615,42 @@ img {
     color: #E3B873;
     text-decoration: none;
     transform: rotate(90deg);
-    line-height: 0.8;
-    font-size: 0.8rem; }
+    line-height: 0.8rem;
+    font-size: 1.05rem; }
     .instagram__link::after {
       content: '';
       width: 50px;
       height: 1px;
       background-color: #E3B873;
-      margin-left: 8px; }
+      margin-left: 14px; }
 
 .title {
   margin: 0;
   font-family: 'Yeseva One', cursive;
-  font-size: 2.3rem;
+  font-size: 3rem;
   font-weight: normal;
-  line-height: 45px;
+  line-height: 3.92rem;
   text-transform: uppercase; }
   .title--primary {
     color: #E3B873; }
 
 .projects {
-  padding-bottom: 30rem; }
+  padding-bottom: 20rem; }
+  .projects__swiper-wrapper {
+    margin-top: 1rem; }
+  .projects__swiper-slide {
+    display: grid;
+    grid-template-columns: 1fr 1fr; }
+
+.swiper-wrapper {
+  margin-bottom: 0.9rem; }
 
 .swiper-slide {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 5rem; }
+  padding-bottom: 5rem;
+  margin-top: 0.95rem; }
   .swiper-slide__text {
     flex-basis: 50%;
-    margin-bottom: 1rem;
-    margin-right: -5rem; }
+    margin-bottom: 1.4rem; }
   .swiper-slide__heading {
     font-size: 1.28rem;
     color: #E3B873;
@@ -673,10 +697,10 @@ img {
 .control__video {
   display: flex;
   margin: auto;
-  margin-bottom: 3.6rem;
+  margin-bottom: 4.25rem;
   position: relative;
-  max-width: 46.5rem;
-  min-height: 25rem;
+  max-width: 58.3rem;
+  min-height: 31rem;
   background: #131313 url("../img/video-mask.jpg") center no-repeat;
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15); }
   .control__video::before {
@@ -691,12 +715,12 @@ img {
   margin-top: -25rem; }
 
 .control__text {
-  max-width: 35rem;
+  max-width: 42rem;
   margin: auto;
   text-align: center;
   font-weight: normal;
-  font-size: 1.15rem;
-  line-height: 2rem;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
   color: #131313; }
   .control__text::before {
     content: '';
@@ -704,7 +728,7 @@ img {
     width: 55px;
     height: 2px;
     margin: auto;
-    margin-bottom: 1.8rem;
+    margin-bottom: 2.3rem;
     background-color: #E3B873;
     border-radius: 30px; }
 
@@ -713,86 +737,88 @@ img {
   flex-wrap: wrap;
   margin: auto;
   justify-content: center;
-  max-width: 45rem;
-  margin-top: 3.5rem; }
+  max-width: 60rem;
+  margin-top: 4.1rem; }
 
 .control__input-group {
   display: flex;
   flex-direction: column;
   flex-basis: 30%;
-  margin-right: 3rem; }
+  margin-right: 2.8rem;
+  max-width: 24rem; }
+
+.control__input {
+  font-size: 1.2rem; }
 
 .control__policy {
   flex-basis: 100%;
-  margin-top: 1rem; }
+  margin-top: 2.7rem; }
   .control__policy-label {
-    justify-content: center; }
+    justify-content: center;
+    font-size: 1.15rem; }
 
 .control__button {
-  padding: 1rem 3.4rem;
-  font-size: 0.95rem; }
+  padding: 1rem 4.2rem;
+  font-size: 1.1rem; }
 
 .control__label {
   font-family: 'Futura Book', sans-serif;
-  margin-bottom: -0.8rem;
+  margin-bottom: -0.5rem;
   font-weight: normal;
-  font-size: 0.75rem;
+  font-size: 1.1rem;
   line-height: 1.42rem;
   color: rgba(54, 54, 54, 0.5); }
 
 .video__play {
   position: relative;
   margin: auto;
-  width: 8rem;
-  height: 8rem; }
+  width: 10rem;
+  height: 10rem; }
 
 .types__section-title {
-  margin-bottom: 1.6rem;
-  font-size: 0.76rem; }
+  margin-bottom: 2.5rem; }
 
-.card__text {
-  position: relative;
-  margin: 0 auto;
-  margin-top: -8rem;
-  margin-bottom: 3rem;
-  padding-top: 1.79rem;
-  padding-left: 2.14rem;
-  max-width: 19rem;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
-  background-color: #fff; }
-
-.card__title {
-  margin-top: 0;
-  margin-bottom: -0.1rem;
-  font-family: 'Yeseva One', cursive;
-  font-weight: normal;
-  font-size: 1.03rem;
-  line-height: 1.78rem; }
-
-.card__list {
-  margin: 0;
-  padding: 0 0 3rem 1rem;
-  font-family: 'Futura Book', sans-serif;
-  font-weight: normal;
-  font-size: 0.8rem;
-  line-height: 1.5rem;
-  color: #959595; }
-
-.card__pricetag {
-  position: absolute;
-  left: 0;
-  bottom: -1.78rem;
-  font-family: 'Yeseva One', cursive;
-  font-weight: normal;
-  font-size: 1rem;
-  line-height: 1.78rem;
-  text-transform: uppercase;
-  background-color: #E3B873;
-  color: #fff;
-  padding: 0.75rem 4.6rem 0.75rem 2rem; }
-
-.card__img {
-  max-width: 22.5rem; }
+.card {
+  overflow: hidden; }
+  .card__text {
+    position: relative;
+    margin: 0 auto;
+    margin-top: -9.5rem;
+    margin-bottom: 3rem;
+    padding-top: 1.79rem;
+    padding-left: 2.14rem;
+    max-width: 23.6rem;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+    background-color: #fff; }
+  .card__title {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    font-family: 'Yeseva One', cursive;
+    font-weight: normal;
+    font-size: 1.3rem;
+    line-height: 1.78rem; }
+  .card__list {
+    margin: 0;
+    padding: 0 0 3rem 1rem;
+    font-family: 'Futura Book', sans-serif;
+    font-weight: normal;
+    font-size: 1.07rem;
+    line-height: 1.85rem;
+    color: #959595; }
+  .card__pricetag {
+    position: absolute;
+    left: 0;
+    bottom: -1.78rem;
+    font-family: 'Yeseva One', cursive;
+    font-weight: normal;
+    font-size: 1.3rem;
+    line-height: 1.78rem;
+    text-transform: uppercase;
+    background-color: #E3B873;
+    color: #fff;
+    padding: 0.95rem 2.5rem 0.95rem 2.7rem; }
+  .card__img {
+    max-width: 30rem; }
 
 .design-project {
   padding-bottom: 20rem; }
@@ -802,11 +828,11 @@ img {
     margin-bottom: 1.5rem; }
 
 .description__text {
-  max-width: 43rem;
-  font-family: 'FuturaBookC', sans-serif;
+  max-width: 51rem;
+  font-family: 'Futura Book', sans-serif;
   font-weight: normal;
-  font-size: 1rem;
-  line-height: 1.7rem;
+  font-size: 1.4rem;
+  line-height: 1.9rem;
   text-align: center;
   color: #131313; }
 
@@ -815,73 +841,79 @@ img {
   position: relative; }
   .footer__wrap {
     position: absolute;
-    background: url("../img/bg_lines.svg") no-repeat center;
+    background: url("../img/bg_lines.svg") no-repeat center/cover;
     background-color: #181818;
-    max-width: 50rem;
+    width: 62.8rem;
     margin-bottom: 3rem;
     padding: 1rem 12rem;
-    margin-top: -12rem;
+    margin-top: -16rem;
     left: 50%;
     transform: translateX(-50%); }
   .footer__title {
-    margin-bottom: 2.8rem;
+    margin-bottom: 3.5rem;
     font-family: 'Yeseva One', cursive;
     font-weight: normal;
-    font-size: 1.1rem;
+    font-size: 1.42rem;
     text-align: center;
     text-transform: uppercase;
     color: #fff;
     z-index: 100; }
     .footer__title--primary {
       margin: auto;
-      padding-top: 20rem;
-      max-width: 28rem;
+      padding-top: 19rem;
+      max-width: 35rem;
       font-weight: normal;
-      font-size: 1.2rem;
-      line-height: 1.5rem;
+      font-size: 1.42rem;
+      line-height: 1.9rem;
       text-align: center;
       text-transform: uppercase;
       color: #E3B873; }
   .footer__form {
     display: flex;
     flex-wrap: wrap;
-    max-width: 29rem;
+    max-width: 60rem;
     margin: auto;
     justify-content: space-between; }
     .footer__form_label {
-      font-size: 0.75rem;
+      font-size: 1rem;
       margin-bottom: -0.3rem; }
   .footer__input {
-    font-size: 1rem; }
+    font-size: 1.3rem; }
   .footer__input-group {
     display: flex;
     flex-direction: column;
-    flex-basis: 45%;
-    margin-bottom: 2.5rem; }
+    flex-basis: 50%;
+    margin-bottom: 3.2rem; }
     .footer__input-group--full-width {
       flex-basis: 100%;
-      margin-bottom: 1rem; }
+      margin-bottom: 3.3rem; }
   .footer__policy {
     flex-basis: 100%;
-    margin-bottom: 3rem; }
+    margin-bottom: 3rem;
+    justify-content: center; }
+    .footer__policy-label {
+      font-size: 1.15rem; }
   .footer__button {
     margin: auto;
-    padding: 1rem 3.6rem;
+    margin-bottom: 1.2rem;
+    padding: 1.1rem 4.2rem;
     border-radius: 0;
-    font-size: 0.9rem; }
+    font-size: 1.13rem; }
   .footer-menu {
     background-color: #131313;
     padding: 2rem 0; }
   .footer__map {
     display: flex;
     justify-content: center;
-    margin-bottom: 4rem; }
+    margin-bottom: 2rem;
+    width: 100%;
+    height: 37.14rem; }
   .footer__links {
     display: flex;
     justify-content: center;
     align-items: center; }
   .footer-link {
-    margin-top: 1.5rem;
+    margin-top: 1.8rem;
     margin-bottom: 2rem;
     height: 30px;
     width: 30px; }
@@ -948,17 +980,17 @@ img {
   .modal__button {
     align-self: flex-end; }
 
-@media screen and (max-width: 1399px) {
+@media (max-width: 1399px) {
   html {
     font-size: 14px; } }
 
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
   html {
     font-size: 12px; }
   .nav__item {
     margin-right: 1rem; } }
 
-@media screen and (min-width: 993px) {
+@media (min-width: 993px) {
   .button:hover {
     cursor: pointer; }
   .button--primary:hover {
@@ -972,28 +1004,68 @@ img {
   .nav__item:hover {
     color: #E3B873; } }
 
-@media screen and (max-width: 992px) {
+@media (max-width: 992px) {
   .nav {
     display: none; }
   .hero__instagram {
     display: none; }
   .hero__content {
-    margin-left: 0; } }
+    margin-left: 0; }
+  .container {
+    padding: 0 3rem; } }
 
-@media screen and (max-width: 810px) {
+@media (max-width: 810px) {
+  .container {
+    padding: 0 1rem; }
   .col-50 {
     width: 90%; }
+  .col-40 {
+    width: 70%; }
   .row {
     flex-direction: column;
     align-items: center; }
   .types__card {
     margin-bottom: 5rem; }
   .card__text {
-    margin-left: 0; } }
+    margin-left: 0; }
+  .swiper-slide {
+    padding-bottom: 2rem; }
+    .swiper-slide__heading {
+      font-size: 1.1rem; }
+    .swiper-slide__text {
+      margin-right: 0; }
+    .swiper-slide__img {
+      margin-top: 1rem;
+      margin-bottom: 2rem; }
+  .control__label {
+    font-size: 1rem;
+    margin-bottom: 0; }
+  .control__input-group {
+    flex-basis: 100%; }
+  .control__policy-label {
+    justify-content: left;
+    font-size: 1.2rem; }
+  .control__button {
+    flex-basis: 60%;
+    margin-top: 2rem;
+    order: 2;
+    border-radius: 0; }
+  .control__input {
+    font-size: 1.5rem;
+    flex-basis: 100%; }
+  .footer__wrap {
+    width: 40rem;
+    margin-top: -20rem; }
+  .footer__title--primary {
+    padding-top: 25rem; } }
 
-@media screen and (max-width: 570px) {
+@media (max-width: 570px) {
   html {
     font-size: 10px; }
+  .control__input {
+    width: 100%; }
+  .control__button {
+    flex-basis: 70%; }
   .col-50 {
     width: 90%; }
   .contacts__phone {
@@ -1018,32 +1090,74 @@ img {
     margin-bottom: 1.85rem; }
   .hero__scroll-down {
     display: none; }
-  .swiper-slide {
-    padding-bottom: 2rem; }
-    .swiper-slide__heading {
-      font-size: 1.1rem; }
-    .swiper-slide__text {
-      margin-right: 0; }
-    .swiper-slide__img {
-      margin-top: 1rem;
-      margin-bottom: 2rem; }
   .projects {
     padding-bottom: 17rem; }
   .section-title__projects {
     padding-top: -50px; } }
 
-@media screen and (max-width: 440px) {
+@media (max-width: 440px) {
+  .hero__container {
+    width: 95%; }
+  .control__label {
+    font-size: 1rem;
+    margin-bottom: 0; }
+  .control__input {
+    width: 100%;
+    font-size: 1.5rem; }
   .control__input-group {
-    flex-basis: 48%; }
-  .control__policy {
-    flex-basis: 49%; }
+    flex-basis: 90%; }
+  .control__policy-label {
+    justify-content: left;
+    font-size: 1.2rem; }
   .control__button {
-    flex-basis: 49%;
+    flex-basis: 90%;
     margin-top: 2rem;
-    order: 2; }
-  .footer__links {
-    order: 3; } }
+    order: 2;
+    border-radius: 0; }
+  .section-title__heading {
+    margin-bottom: 1.3rem;
+    font-size: 1.6rem; }
+  .card__title {
+    font-size: 1.3rem; }
+  .card__list {
+    font-size: 1.1rem;
+    line-height: 2rem; }
+  .design-project {
+    padding-bottom: 5rem; }
+  .footer {
+    background: #131313; }
+    .footer__wrap {
+      background: #131313;
+      padding-right: 1rem;
+      padding-left: 2rem;
+      margin-top: 0;
+      position: relative;
+      width: 100%;
+      flex-direction: column; }
+    .footer__input-group {
+      flex-basis: 100%;
+      justify-content: start; }
+    .footer__input {
+      font-size: 1.2rem; }
+    .footer__title--primary {
+      padding: 0;
+      font-size: 1.5rem; }
+    .footer__form {
+      align-items: start; }
+    .footer__policy {
+      margin-top: 1rem;
+      margin-bottom: 1rem; }
+    .footer__button {
+      width: 100%; }
+    .footer-menu {
+      display: none; }
+    .footer__map {
+      margin-bottom: 0;
+      padding-bottom: 2rem; }
+    .footer__end {
+      display: flex;
+      flex-direction: column-reverse; } }
 
-@media screen and (max-height: 520px) {
+@media (max-height: 520px) {
   .hero__scroll-down {
     display: none; } }
