--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -2,10 +2,10 @@
   &__video
     display: flex
     margin: auto
-    margin-bottom: 3.6rem
+    margin-bottom: 4.25rem
     position: relative
-    max-width: 46.5rem
-    min-height: 25rem
+    max-width: 58.3rem
+    min-height: 31rem
     background: $dark url('../img/video-mask.jpg') center no-repeat
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15)
     &::before
@@ -18,12 +18,12 @@
     margin-bottom: 2.21rem
     margin-top: -25rem
   &__text
-    max-width: 35rem
+    max-width: 42rem
     margin: auto
     text-align: center
     font-weight: normal
-    font-size: 1.15rem
-    line-height: 2rem
+    font-size: 1.5rem
+    line-height: 2.5rem
     color: $dark
     &::before
       content: ''
@@ -31,7 +31,7 @@
       width: 55px
       height: 2px
       margin: auto
-      margin-bottom: 1.8rem
+      margin-bottom: 2.3rem
       background-color: $primary
       border-radius: 30px
   &__form
@@ -39,26 +39,30 @@
     flex-wrap: wrap
     margin: auto
     justify-content: center
-    max-width: 45rem
-    margin-top: 3.5rem
+    max-width: 60rem
+    margin-top: 4.1rem
   &__input-group
     display: flex
     flex-direction: column
     flex-basis: 30%
-    margin-right: 3rem
+    margin-right: 2.8rem
+    max-width: 24rem
+  &__input
+    font-size: 1.2rem
   &__policy
     flex-basis: 100%
-    margin-top: 1rem
+    margin-top: 2.7rem
     &-label
       justify-content: center
+      font-size: 1.15rem
   &__button
-    padding: 1rem 3.4rem
-    font-size: 0.95rem
+    padding: 1rem 4.2rem
+    font-size: 1.1rem
   &__label
     font-family: 'Futura Book', sans-serif
-    margin-bottom: -0.8rem
+    margin-bottom: -0.5rem
     font-weight: normal
-    font-size: 0.75rem
+    font-size: 1.1rem
     line-height: 1.42rem
     color: rgba(54, 54, 54, 0.5)
 
@@ -66,5 +70,5 @@
   &__play
     position: relative
     margin: auto
-    width: 8rem
-    height: 8rem
+    width: 10rem
+    height: 10rem
