--- a/sass/templates/_design_project.sass
+++ b/sass/templates/_design_project.sass
@@ -7,10 +7,10 @@
 
 .description
   &__text
-    max-width: 43rem
-    font-family: 'FuturaBookC', sans-serif
+    max-width: 51rem
+    font-family: 'Futura Book', sans-serif
     font-weight: normal
-    font-size: 1rem
-    line-height: 1.7rem
+    font-size: 1.4rem
+    line-height: 1.9rem
     text-align: center
     color: $dark
