--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -3,19 +3,19 @@
   position: relative
   &__wrap
     position: absolute
-    background: url('../img/bg_lines.svg') no-repeat center
+    background: url('../img/bg_lines.svg') no-repeat center / cover
     background-color: $black
-    max-width: 50rem
+    width: 62.8rem
     margin-bottom: 3rem
     padding: 1rem 12rem
-    margin-top: -12rem
+    margin-top: -16rem
     left: 50%
     transform: translateX(-50%)
   &__title
-    margin-bottom: 2.8rem
+    margin-bottom: 3.5rem
     font-family: 'Yeseva One', cursive
     font-weight: normal
-    font-size: 1.1rem
+    font-size: 1.42rem
     text-align: center
     text-transform: uppercase
     color: $light
@@ -23,54 +23,60 @@
 
     &--primary
       margin: auto
-      padding-top: 20rem
-      max-width: 28rem
+      padding-top: 19rem
+      max-width: 35rem
       font-weight: normal
-      font-size: 1.2rem
-      line-height: 1.5rem
+      font-size: 1.42rem
+      line-height: 1.9rem
       text-align: center
       text-transform: uppercase
       color: $primary
   &__form
     display: flex
     flex-wrap: wrap
-    max-width: 29rem
+    max-width: 60rem
     margin: auto
     justify-content: space-between
     &_label
-      font-size: 0.75rem
+      font-size: 1rem
       margin-bottom: -0.3rem
   &__input
-    font-size: 1rem
+    font-size: 1.3rem
   &__input-group
     display: flex
     flex-direction: column
-    flex-basis: 45%
-    margin-bottom: 2.5rem
+    flex-basis: 50%
+    margin-bottom: 3.2rem
     &--full-width
       flex-basis: 100%
-      margin-bottom: 1rem
+      margin-bottom: 3.3rem
   &__policy
     flex-basis: 100%
     margin-bottom: 3rem
+    justify-content: center
+    &-label
+      font-size: 1.15rem
   &__button
     margin: auto
-    padding: 1rem 3.6rem
+    margin-bottom: 1.2rem
+    padding: 1.1rem 4.2rem
     border-radius: 0
-    font-size: 0.9rem
+    font-size: 1.13rem
   &-menu
     background-color: $dark
     padding: 2rem 0
   &__map
     display: flex
     justify-content: center
-    margin-bottom: 4rem
+    margin-bottom: 2rem
+    width: 100%
+    height: 37.14rem
   &__links
     display: flex
     justify-content: center
     align-items: center
   &-link
-    margin-top: 1.5rem
+    margin-top: 1.8rem
     margin-bottom: 2rem
     height: 30px
     width: 30px
@@ -79,4 +85,6 @@
       margin-right: 1rem
     &__inst
       background: url('../img/footer_icon_inst.svg') no-repeat center
+
+
     
