--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -1,27 +1,27 @@
 .types
   &__section-title
-    margin-bottom: 1.6rem
-    font-size: 0.76rem
+    margin-bottom: 2.5rem
 
 .card
+  overflow: hidden
 
   &__text
     position: relative
     margin: 0 auto
-    margin-top: -8rem
+    margin-top: -9.5rem
     margin-bottom: 3rem
     padding-top: 1.79rem
     padding-left: 2.14rem
-    max-width: 19rem
+    max-width: 23.6rem
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
     background-color: $light
 
   &__title
     margin-top: 0
-    margin-bottom: -0.1rem
+    margin-bottom: 0.5rem
     font-family: 'Yeseva One', cursive
     font-weight: normal
-    font-size: 1.03rem
+    font-size: 1.3rem
     line-height: 1.78rem
 
   &__list
@@ -29,8 +29,8 @@
     padding: 0 0 3rem 1rem
     font-family: 'Futura Book', sans-serif
     font-weight: normal
-    font-size: 0.8rem
-    line-height: 1.5rem
+    font-size: 1.07rem
+    line-height: 1.85rem
     color: $secondary
 
   &__pricetag
@@ -39,15 +39,15 @@
     bottom: -1.78rem
     font-family: 'Yeseva One', cursive
     font-weight: normal
-    font-size: 1rem
+    font-size: 1.3rem
     line-height: 1.78rem
     text-transform: uppercase
     background-color: $primary
     color: $light
-    padding: 0.75rem 4.6rem 0.75rem 2rem
+    padding: 0.95rem 2.5rem 0.95rem 2.7rem
 
   &__img
-    max-width: 22.5rem
+    max-width: 30rem
 
 
   
